crates/auryn-compiler/src/auryn/codegen_java/snapshots/auryn_compiler__auryn__codegen_java__class_generator__tests__generic_function.snap
---
source: crates/auryn-compiler/src/auryn/codegen_java/class_generator.rs
expression: "generate_classes(r#\"\n            // main\n            fn main() {\n                let a: I32 = identity(0)\n                let b: String = identity(\"hi\")\n            }\n\n            fn identity[T](value: T) -> T {\n                return value\n            }\n            \"#)"
---
Main:
ClassData
  this_class:		#2	Main
  super_class:		#27	java/lang/Object
Constant pool:
  #01 = Utf8			Main
  #02 = Class		#1	Main
  #03 = Utf8			main$main
  #04 = Utf8			()V
  #05 = Utf8			java/lang/String
  #06 = Class		#5	java/lang/String
  #07 = Integer			0
  #08 = Utf8			main$identity$($I32)
  #09 = Utf8			(I)I
  #10 = NameAndType	#8:#9	main$identity$($I32):(I)I
  #11 = MethodRef	#2.#10	Main:main$identity$($I32):(I)I
  #12 = Utf8			hi
  #13 = String		#12	hi
  #14 = Utf8			main$identity$($String)
  #15 = Utf8			(Ljava/lang/String;)Ljava/lang/String;
  #16 = NameAndType	#14:#15	main$identity$($String):(Ljava/lang/String;)Ljava/lang/String;
  #17 = MethodRef	#2.#16	Main:main$identity$($String):(Ljava/lang/String;)Ljava/lang/String;
  #18 = Utf8			Code
  #19 = Utf8			StackMapTable
  #20 = Utf8			main
  #21 = Utf8			([Ljava/lang/String;)V
  #22 = Utf8			[Ljava/lang/String;
  #23 = Class		#22	[Ljava/lang/String;
  #24 = NameAndType	#3:#4	main$main:()V
  #25 = MethodRef	#2.#24	Main:main$main:()V
  #26 = Utf8			java/lang/Object
  #27 = Class		#26	java/lang/Object

{
  fn main$main {
    descriptor: ()V
    flags: PUBLIC | STATIC
    Code:
      stack = 1, locals = 3
       0: LoadConstant		#7	0
       2: InvokeStatic		#11	Main:main$identity$($I32):(I)I
       5: IStore			0
       7: LoadConstant		#13	hi
       9: InvokeStatic		#17	Main:main$identity$($String):(Ljava/lang/String;)Ljava/lang/String;
      12: AStore			1
      14: Return
      StackMapTable:
        Full
          offset_delta = 0
          locals = [  ]
          Stack = [  ]
  }

  fn main$identity$($String) {
    descriptor: (Ljava/lang/String;)Ljava/lang/String;
    flags: PUBLIC | STATIC
    Code:
      stack = 1, locals = 2
      0: ALoad			0
      2: AReturn
      StackMapTable:
        Full
          offset_delta = 0
          locals = [ Object 'java/lang/String' ]
          Stack = [  ]
  }

  fn main$identity$($I32) {
    descriptor: (I)I
    flags: PUBLIC | STATIC
    Code:
      stack = 1, locals = 2
      0: ILoad			0
      2: IReturn
      StackMapTable:
        Full
          offset_delta = 0
          locals = [ Integer ]
          Stack = [  ]
  }

  fn main {
    descriptor: ([Ljava/lang/String;)V
    flags: PUBLIC | STATIC
    Code:
      stack = 0, locals = 2
      0: InvokeStatic		#25	Main:main$main:()V
      3: Return
      StackMapTable:
        Full
          offset_delta = 0
          locals = [ Object '[Ljava/lang/String;' ]
          Stack = [  ]
  }

}

-----
