crates/auryn-compiler/src/auryn/codegen_java/snapshots/auryn_compiler__auryn__codegen_java__class_generator__tests__i64.snap
---
source: crates/auryn-compiler/src/auryn/codegen_java/class_generator.rs
expression: "generate_class(r#\"\n            fn main() {\n                let a: I64 = 35\n                let b: I64 = 65\n                let sum = a + b\n                if sum >= 100 {\n                    std.print(\"Greater or equal than 100\")\n                }\n                let arr: []I64 = std.arrayOfZeros(3)\n                arr.set(0, a)\n                arr.set(1, b)\n                arr.set(2, sum)\n                printArray(arr)\n            }\n\n            fn printArray(values: []I64) {\n                let i: I32 = 0\n                loop {\n                    if i >= values.len() {\n                        break\n                    }\n\n                    std.print(values.get(i))\n\n                    i += 1\n                }\n            }\n            \"#)"
---
ClassData
  this_class:		#2	Main
  super_class:		#61	java/lang/Object
Constant pool:
  #01 = Utf8			Main
  #02 = Class		#1	Main
  #03 = Utf8			main$main
  #04 = Utf8			()V
  #05 = Utf8			java/io/PrintStream
  #06 = Class		#5	java/io/PrintStream
  #07 = Utf8			java/lang/String
  #08 = Class		#7	java/lang/String
  #09 = Utf8			[J
  #10 = Class		#9	[J
  #11 = Long			35
  #13 = Long			65
  #15 = Long			100
  #17 = Utf8			java/lang/System
  #18 = Class		#17	java/lang/System
  #19 = Utf8			out
  #20 = Utf8			Ljava/io/PrintStream;
  #21 = NameAndType	#19:#20	out:Ljava/io/PrintStream;
  #22 = FieldRef	#18.#21	java/lang/System.out:Ljava/io/PrintStream;
  #23 = Utf8			Greater or equal than 100
  #24 = String		#23	Greater or equal than 100
  #25 = Utf8			println
  #26 = Utf8			(Ljava/lang/Object;)V
  #27 = NameAndType	#25:#26	println:(Ljava/lang/Object;)V
  #28 = MethodRef	#6.#27	java/io/PrintStream:println:(Ljava/lang/Object;)V
  #29 = Integer			3
  #30 = Integer			0
  #31 = Utf8			std$set
  #32 = Utf8			([JIJ)V
  #33 = NameAndType	#31:#32	std$set:([JIJ)V
  #34 = MethodRef	#2.#33	Main:std$set:([JIJ)V
  #35 = Integer			1
  #36 = Integer			2
  #37 = Utf8			main$printArray
  #38 = Utf8			([J)V
  #39 = NameAndType	#37:#38	main$printArray:([J)V
  #40 = MethodRef	#2.#39	Main:main$printArray:([J)V
  #41 = Utf8			Code
  #42 = Utf8			StackMapTable
  #43 = Utf8			std$len
  #44 = Utf8			([J)I
  #45 = NameAndType	#43:#44	std$len:([J)I
  #46 = MethodRef	#2.#45	Main:std$len:([J)I
  #47 = Utf8			std$get
  #48 = Utf8			([JI)J
  #49 = NameAndType	#47:#48	std$get:([JI)J
  #50 = MethodRef	#2.#49	Main:std$get:([JI)J
  #51 = Utf8			(J)V
  #52 = NameAndType	#25:#51	println:(J)V
  #53 = MethodRef	#6.#52	java/io/PrintStream:println:(J)V
  #54 = Utf8			main
  #55 = Utf8			([Ljava/lang/String;)V
  #56 = Utf8			[Ljava/lang/String;
  #57 = Class		#56	[Ljava/lang/String;
  #58 = NameAndType	#3:#4	main$main:()V
  #59 = MethodRef	#2.#58	Main:main$main:()V
  #60 = Utf8			java/lang/Object
  #61 = Class		#60	java/lang/Object

{
  fn main$main {
    descriptor: ()V
    flags: PUBLIC | STATIC
    Code:
      stack = 4, locals = 8
       0: Ldc2W			#11	35
       3: LStore		0
       5: Ldc2W			#13	65
       8: LStore		2
      10: LLoad			0
      12: LLoad			2
      14: LAdd
      15: LStore		4
      17: LLoad			4
      19: Ldc2W			#15	100
      22: Lcmp
      23: IfI >=		30
      26: IConst			0
      27: Goto				31
      30: IConst			1
      31: IfI ==		45
      34: GetStatic		#22	java/lang/System.out:Ljava/io/PrintStream;
      37: LoadConstant		#24	Greater or equal than 100
      39: InvokeVirtual		#28	java/io/PrintStream:println:(Ljava/lang/Object;)V
      42: Goto				45
      45: LoadConstant		#29	3
      47: NewArray		Long
      49: AStore			6
      51: ALoad			6
      53: LoadConstant		#30	0
      55: LLoad			0
      57: InvokeStatic		#34	Main:std$set:([JIJ)V
      60: ALoad			6
      62: LoadConstant		#35	1
      64: LLoad			2
      66: InvokeStatic		#34	Main:std$set:([JIJ)V
      69: ALoad			6
      71: LoadConstant		#36	2
      73: LLoad			4
      75: InvokeStatic		#34	Main:std$set:([JIJ)V
      78: ALoad			6
      80: InvokeStatic		#40	Main:main$printArray:([J)V
      83: Return
      StackMapTable:
        Full
          offset_delta = 0
          locals = [  ]
          Stack = [  ]
        Full
          offset_delta = 25
          locals = [ Long,Long,Long ]
          Stack = [  ]
        Full
          offset_delta = 3
          locals = [ Long,Long,Long ]
          Stack = [  ]
        Full
          offset_delta = 0
          locals = [ Long,Long,Long ]
          Stack = [ Integer ]
        Full
          offset_delta = 2
          locals = [ Long,Long,Long ]
          Stack = [  ]
        Full
          offset_delta = 10
          locals = [ Long,Long,Long ]
          Stack = [  ]
  }

  fn main$printArray {
    descriptor: ([J)V
    flags: PUBLIC | STATIC
    Code:
      stack = 3, locals = 3
       0: LoadConstant		#30	0
       2: IStore			1
       4: ILoad			1
       6: ALoad			0
       8: InvokeStatic		#46	Main:std$len:([J)I
      11: IfICmp >=		18
      14: IConst			0
      15: Goto				19
      18: IConst			1
      19: IfI ==		23
      22: Return
      23: GetStatic		#22	java/lang/System.out:Ljava/io/PrintStream;
      26: ALoad			0
      28: ILoad			1
      30: InvokeStatic		#50	Main:std$get:([JI)J
      33: InvokeVirtual		#53	java/io/PrintStream:println:(J)V
      36: ILoad			1
      38: LoadConstant		#35	1
      40: IAdd
      41: IStore			1
      43: Goto				4
      StackMapTable:
        Full
          offset_delta = 0
          locals = [ Object '[J' ]
          Stack = [  ]
        Full
          offset_delta = 3
          locals = [ Object '[J',Integer ]
          Stack = [  ]
        Full
          offset_delta = 9
          locals = [ Object '[J',Integer ]
          Stack = [  ]
        Full
          offset_delta = 3
          locals = [ Object '[J',Integer ]
          Stack = [  ]
        Full
          offset_delta = 0
          locals = [ Object '[J',Integer ]
          Stack = [ Integer ]
        Full
          offset_delta = 2
          locals = [ Object '[J',Integer ]
          Stack = [  ]
        Full
          offset_delta = 0
          locals = [ Object '[J',Integer ]
          Stack = [  ]
  }

  fn std$get {
    descriptor: ([JI)J
    flags: PUBLIC | STATIC
    Code:
      stack = 2, locals = 3
      0: ALoad			0
      2: ILoad			1
      4: LALoad
      5: LReturn
      StackMapTable:
        Full
          offset_delta = 0
          locals = [ Object '[J',Integer ]
          Stack = [  ]
  }

  fn std$len {
    descriptor: ([J)I
    flags: PUBLIC | STATIC
    Code:
      stack = 1, locals = 2
      0: ALoad			0
      2: ArrayLength
      3: IReturn
      StackMapTable:
        Full
          offset_delta = 0
          locals = [ Object '[J' ]
          Stack = [  ]
  }

  fn std$set {
    descriptor: ([JIJ)V
    flags: PUBLIC | STATIC
    Code:
      stack = 4, locals = 5
      0: ALoad			0
      2: ILoad			1
      4: LLoad			2
      6: LAStore
      7: Return
      StackMapTable:
        Full
          offset_delta = 0
          locals = [ Object '[J',Integer,Long ]
          Stack = [  ]
  }

  fn main {
    descriptor: ([Ljava/lang/String;)V
    flags: PUBLIC | STATIC
    Code:
      stack = 0, locals = 2
      0: InvokeStatic		#59	Main:main$main:()V
      3: Return
      StackMapTable:
        Full
          offset_delta = 0
          locals = [ Object '[Ljava/lang/String;' ]
          Stack = [  ]
  }

}
