crates/auryn-compiler/src/auryn/codegen_java/snapshots/auryn_compiler__auryn__codegen_java__class_generator__tests__loop-2.snap
---
source: crates/auryn-compiler/src/auryn/codegen_java/class_generator.rs
expression: "generate_class_wrapped(\"loop { break }\")"
---
ClassData
  this_class:		#2	Main
  super_class:		#14	java/lang/Object
Constant pool:
  #01 = Utf8			Main
  #02 = Class		#1	Main
  #03 = Utf8			main$main
  #04 = Utf8			()V
  #05 = Utf8			Code
  #06 = Utf8			StackMapTable
  #07 = Utf8			main
  #08 = Utf8			([Ljava/lang/String;)V
  #09 = Utf8			[Ljava/lang/String;
  #10 = Class		#9	[Ljava/lang/String;
  #11 = NameAndType	#3:#4	main$main:()V
  #12 = MethodRef	#2.#11	Main:main$main:()V
  #13 = Utf8			java/lang/Object
  #14 = Class		#13	java/lang/Object

{
  fn main$main {
    descriptor: ()V
    flags: PUBLIC | STATIC
    Code:
      stack = 0, locals = 1
      0: Return
      StackMapTable:
        Full
          offset_delta = 0
          locals = [  ]
          Stack = [  ]
  }

  fn main {
    descriptor: ([Ljava/lang/String;)V
    flags: PUBLIC | STATIC
    Code:
      stack = 0, locals = 2
      0: InvokeStatic		#12	Main:main$main:()V
      3: Return
      StackMapTable:
        Full
          offset_delta = 0
          locals = [ Object '[Ljava/lang/String;' ]
          Stack = [  ]
  }

}
